--- a/tecnologia.html
+++ b/tecnologia.html
@@ -29,6 +29,9 @@
 	<script src="assets/js/jquery.tweet.js"></script>
 	<script src="assets/js/jquery.prettyPhoto.js"></script>
 	<script src="assets/js/application.js"></script>
+
+	<!-- Efecto renderizado -->
+	<script src="assets/js/contenido.js"></script>
 	<!--[if (gte IE 6)&(lte IE 8)]>
 	<script src="selectivizr.js"></script>
 	<![endif]-->
@@ -138,6 +141,9 @@
 								<p>
 									En el catálogo de un operador de telefonía podemos esperar encontrar exclusivamente a teléfonos inteligentes y dispositivos similares...
 								</p>
+								<div class="texto">
+									<span>Primer texto. Esta comunidad de programadores está diseñado para que tanto programadores aficionados como profesionales puedan disponer de una herramienta completa y actualizada, con el fin de compartir conocimientos, resolver dudas o publicar sus propias creaciones.</span>
+								</div>
 								<p>
 									<a href="#" class="btn btn-success"> <span class="m-icon-big-swapright m-icon-white"></span></a>
 								</p>
