--- a/ciencia.html
+++ b/ciencia.html
@@ -37,6 +37,9 @@
 	<script src="assets/js/hover/jquery-hover-effect.js"></script>
 	<script src="assets/js/hover/setting.js"></script>
 	<script src="assets/js/custom.js"></script>
+
+	<!-- Efecto renderizado -->
+	<script src="assets/js/contenido.js"></script>
 	<!-- fav and touch icons -->
 	<link rel="shortcut icon" href="assets/ico/icon.fw.png" />
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -146,12 +149,9 @@
 							<img src="assets/img/tecnologia/4.fw.png" alt="" id="inodoro" data-audio="audioInodoro" />
 							<div class="caption" id="inodoro_inteligente" data-audio="audioInodoro_inteligente">
 								<h3 class="heading-success" >Inodoro Inteligente</h3>
-								<p>
-									Pocas partes de la casa tienen tantos sinónimos como el inodoro (que dependerán según el país): desde "trono" a retrete, sanitario, etc...
-								</p>
-								<p>
-									<a href="#" class="btn btn-success"> <span class="m-icon-big-swapright m-icon-white"></span></a>
-								</p>
+								<div class="texto">
+									<span>Pocas partes de la casa tienen tantos sinónimos como el inodoro (que dependerán según el país): desde "trono" a retrete, sanitario, etc. Ahora, llega el momento de que este producto se adapte al momento actual, volviéndose "inteligente" y capaz de proporcionarnos información útil sobre nuestra salud.</span>
+								</div>
 							</div>
 						</div>
 					</li>
@@ -160,12 +160,9 @@
 							<img src="assets/img/tecnologia/5.fw.png" alt="" id="celulas" data-audio="audioCelulas"/>
 							<div class="caption" id="celulas_inteligentes" data-audio="audioCelulas_inteligentes">
 								<h3 class="heading-success" >Celulas Inteligentes</h3>
-								<p>
-									Un grupo de ingenieros químicos de la Universidad Estatal de Pennsylvania ha logrado crear los primeros motores sintéticos...
-								</p>
-								<p>
-									<a href="#" class="btn btn-success"> <span class="m-icon-big-swapright m-icon-white"></span></a>
-								</p>
+								<div class="texto">
+									<span>Un grupo de ingenieros químicos de la Universidad Estatal de Pennsylvania ha logrado crear los primeros motores sintéticos capaces de operar en una célula viva sin dañarla. Los dispositivos abren la puerta a todo tipo de tratamientos de enfermedades como el cáncer a nivel intracelular.</span>
+								</div>
 							</div>
 						</div>
 					</li>
@@ -174,12 +171,9 @@
 							<img src="assets/img/tecnologia/6.fw.png" alt="" id="cafe" data-audio="audioCafe" />
 							<div class="caption" id="cafe_ca" data-audio="audioCafe_ca">
 								<h3 class="heading-success" >Cafe - Cafeina</h3>
-								<p>
-									Dos cafés expreso al día. Es aproximadamente la cantidad de cafeína que, según un nuevo experimento científico, ayuda a potenciar nuestra memoria a largo plazo....
-								</p>
-								<p>
-									<a href="#" class="btn btn-success"> <span class="m-icon-big-swapright m-icon-white"></span></a>
-								</p>
+								<div class="texto">
+									<span>Dos cafés expreso al día. Es aproximadamente la cantidad de cafeína que, según un nuevo experimento científico, ayuda a potenciar nuestra memoria a largo plazo. El estudio, liderado por el investigador Michael Yassa de la Universidad de California (Irvine), ha demostrado que tomar 200 miligramos de cafeína puede mejorar nuestra capacidad de recordar algo más de 24 horas de haberlo visto.</span>
+								</div>
 							</div>
 						</div>
 					</li>
