--- a/tecnologia.html
+++ b/tecnologia.html
@@ -29,6 +29,7 @@
 	<script src="assets/js/jquery.tweet.js"></script>
 	<script src="assets/js/jquery.prettyPhoto.js"></script>
 	<script src="assets/js/application.js"></script>
+	<script src="js/audios.js"></script>
 
 	<!-- Efecto renderizado -->
 	<script src="assets/js/contenido.js"></script>
@@ -46,6 +47,10 @@
 </head>
 <body>
 <header>
+<audio src="audios/inicio.mp3" type="audio/mpeg" id="audioInicio"></audio>
+<audio src="audios/tecnologia.mp3" type="audio/mpeg" id="audioTecnologia"></audio>
+<audio src="audios/ciencia.mp3" type="audio/mpeg" id="audioCiencia"></audio>
+<audio src="audios/variedades.mp3" type="audio/mpeg" id="audioVariedades"></audio>
 <!-- Navbar
 ================================================== -->
 <div class="navbar navbar-fixed-top" style="background: red!important;">
@@ -137,16 +142,11 @@
 						<div class="thumbnail">
 							<img src="assets/img/tecnologia/1.fw.png" alt="" />
 							<div class="caption">
-								<h3 class="heading-success" >Crean Ropa Inteligente</h3>
-								<p>
-									En el catálogo de un operador de telefonía podemos esperar encontrar exclusivamente a teléfonos inteligentes y dispositivos similares...
-								</p>
+								<h3 class="heading-success" >Crean Ropa Inteligente</h3>	
 								<div class="texto">
-									<span>Primer texto. Esta comunidad de programadores está diseñado para que tanto programadores aficionados como profesionales puedan disponer de una herramienta completa y actualizada, con el fin de compartir conocimientos, resolver dudas o publicar sus propias creaciones.</span>
-							</div>
-								<p>
-									<a href="#" class="btn btn-success"> <span class="m-icon-big-swapright m-icon-white"></span></a>
-								</p>
+									<span>En el catálogo de un operador de telefonía podemos esperar encontrar exclusivamente a teléfonos inteligentes y dispositivos similares, pero como pensaron que no era suficiente, por lo que se lanzaron a colaborar con Toray, una empresa centrada en el desarrollo de equipos basados en textiles, y hoy anuncian los primeros productos de esta colaboración entre las dos empresas.</span>
+								</div>
+								
 							</div>
 						</div>
 					</li>
@@ -155,12 +155,9 @@
 							<img src="assets/img/tecnologia/3.fw.png" alt="" />
 							<div class="caption">
 								<h3 class="heading-success" >Descubrimiento</h3>
-								<p>
-									Científicos de la Universidad de Columbia han dado un paso importante en la lucha contra un problema estético ...
-								</p>
-								<p>
-									<a href="#" class="btn btn-success"> <span class="m-icon-big-swapright m-icon-white"></span></a>
-								</p>
+								<div class="texto">
+									<span>Científicos de la Universidad de Columbia han dado un paso importante en la lucha contra un problema estético muy común: la calvicie. La técnica consiste en un trasplante celular que, por primera vez es capaz de generar nuevos cabellos.</span>
+								</div>
 							</div>
 						</div>
 					</li>
@@ -169,12 +166,9 @@
 							<img src="assets/img/tecnologia/2.fw.png" alt="" />
 							<div class="caption">
 								<h3 class="heading-success" >Parque Nacional Yasuni ITT</h3>
-								<p>
-									En el catálogo de un operador de telefonía podemos esperar encontrar exclusivamente a teléfonos inteligentes y dispositivos similares...
-								</p>
-								<p>
-									<a href="#" class="btn btn-success"> <span class="m-icon-big-swapright m-icon-white"></span></a>
-								</p>
+								<div class="texto">
+									<span>De acuerdo a estudios científicos, el Parque Yasuní ubicado en la Región amazónica ecuatoriana, en las provincias de Orellana y Pastaza, es la región de mayor diversidad biológica del mundo. El 20 de noviembre 1979 se declaró al Yasuní como Parque Nacional. Esta declaración se la hace por existir en su interior una riqueza natural que debe ser preservada.</span>
+								</div>
 							</div>
 						</div>
 					</li>
