--- a/variedad.html
+++ b/variedad.html
@@ -30,6 +30,9 @@
 	<script src="assets/js/jquery.prettyPhoto.js"></script>
 	<script src="assets/js/application.js"></script>
 	<script src="js/audios.js"></script>
+
+	<!-- Efecto renderizado -->
+	<script src="assets/js/contenido.js"></script>
 	<!--[if (gte IE 6)&(lte IE 8)]>
 	<script src="selectivizr.js"></script>
 	<![endif]-->
@@ -146,12 +149,9 @@
 							<img src="assets/img/tecnologia/7.fw.png" alt="" id="polo" data-audio="audioPolo"/>
 							<div class="caption" id="polo_pro" data-audio="audioPolo_pro">
 								<h3 class="heading-success" >Problemas en el Polo</h3>
-								<p>
-									Si piensas en el Polo Norte como una superficie sólida de hielo vas a llevarte una sorpresa. Este mes se ha derretido y es ahora un enorme lago de agua muy, muy fría. Suena terrible, pero en realidad no es tan serio....
-								</p>
-								<p>
-									<a href="#" class="btn btn-success"> <span class="m-icon-big-swapright m-icon-white"></span></a>
-								</p>
+								<div class="texto">
+									<span>Si piensas en el Polo Norte como una superficie sólida de hielo vas a llevarte una sorpresa. Este mes se ha derretido y es ahora un enorme lago de agua muy, muy fría. Suena terrible, pero en realidad no es tan serio como en principio parece.</span>
+								</div>
 							</div>
 						</div>
 					</li>
@@ -160,12 +160,9 @@
 							<img src="assets/img/tecnologia/8.fw.png" alt="" id="tecnologiaPotable" data-audio="audioTecnologiaPotable" />
 							<div class="caption" id="tecnologia_potable" data-audio="audioTecnologia_potable">
 								<h3 class="heading-success" >Descubrimiento</h3>
-								<p>
-									Uno de los campos de la nanotecnología donde más se ha investigado es en el de usar micropárticulas de sustancias como el dióxido de titanio como agentes limpiadores del agua...
-								</p>
-								<p>
-									<a href="#" class="btn btn-success"> <span class="m-icon-big-swapright m-icon-white"></span></a>
-								</p>
+								<div class="texto">
+									<span>Uno de los campos de la nanotecnología donde más se ha investigado es en el de usar micropárticulas de sustancias como el dióxido de titanio como agentes limpiadores del agua. Los nano-carroñeros (nano-scavengers), que es como se denomina a estos agentes químicos, son capaces de destruir bacterias o de adherirse a contaminantes para hacerlos desaparecer del agua. El problema viene cuando hay que deshacerse de los nano-carroñeros.</span>
+								</div>
 							</div>
 						</div>
 					</li>
@@ -174,12 +171,9 @@
 							<img src="assets/img/tecnologia/9.fw.png" alt="" id="vuelo" data-audio="audioVuelo" />
 							<div class="caption" id="vuelo_aves" data-audio="audioVuelo_aves">
 								<h3 class="heading-success" >Vuelo de Aves</h3>
-								<p>
-									Un grupo de investigadores británicos ha dado con la respuesta científica a uno de los fenómenos más curiosos que a veces vemos surcar el cielo: bandadas de pájaros en formación en V....
-								</p>
-								<p>
-									<a href="#" class="btn btn-success"> <span class="m-icon-big-swapright m-icon-white"></span></a>
-								</p>
+								<div class="texto">
+									<span>Un grupo de investigadores británicos ha dado con la respuesta científica a uno de los fenómenos más curiosos que a veces vemos surcar el cielo: bandadas de pájaros en formación en V. ¿Por qué en esa forma en concreto y no otra? La conclusión a la que han llegado se resume en dos palabras: aerodinámica y eficiencia. Se sabía que era así, pero ahora lo han probado científicamente. Un hallazgo que se podría aplicar al diseño de la Robótica.</span>
+								</div>
 							</div>
 						</div>
 					</li>
