--- a/variedad.html
+++ b/variedad.html
@@ -59,6 +59,10 @@
 <audio src="audios/tecnologia_potable.mp3" type="audio/mpeg" id="audioTecnologia_potable"></audio>
 <audio src="audios/vuelo.mp3" type="audio/mpeg" id="audioVuelo"></audio>
 <audio src="audios/vuelo_aves.mp3" type="audio/mpeg" id="audioVuelo_aves"></audio>
+<audio src="audios/este_sitio.mp3" type="audio/mpeg" id="audioEste_sitio"></audio>
+<audio src="audios/galeria.mp3" type="audio/mpeg" id="audioGaleria"></audio>
+<audio src="audios/buena_a.mp3" type="audio/mpeg" id="audioBuena_a"></audio>
+<audio src="audios/records.mp3" type="audio/mpeg" id="audioRecords"></audio>
 <div class="navbar navbar-fixed-top" style="background: red!important;">
 	<div class="navbar-inner">
 		<div class="container">
@@ -104,14 +108,14 @@
 	<div class="row">
 		<div class="span4">
 			
-			<div class="row">
-				<h3 class="heading-success"><span class="btn btn-large btn-success"><i class="m-icon-big-swapright m-icon-white"></i></span>&nbsp;&nbsp;Este Sitio</h3>				
+			<div class="row" id="este_sitio" data-audio="audioEste_sitio">
+				<h3 class="heading-success" ><span class="btn btn-large btn-success"><i class="m-icon-big-swapright m-icon-white"></i></span>&nbsp;&nbsp;Este Sitio</h3>				
 			</div>
 			<div class="row">
-				<h3 class="heading-success"><span class="btn btn-large btn-success"><i class="m-icon-big-swapright m-icon-white"></i></span>&nbsp;&nbsp;Galería</h3>
+				<h3 class="heading-success" id="galeria" data-audio="audioGaleria"><span class="btn btn-large btn-success"><i class="m-icon-big-swapright m-icon-white"></i></span>&nbsp;&nbsp;Galería</h3>
 				<div id="myCarousel" class="carousel slide testimonials">
 					<div class="carousel-inner">
-						<div class="item active">
+						<div class="item active" id="buena_a" data-audio="audioBuena_a">
 							<div class="testimonial">
 								<img src="assets/img/gal1.fw.png" alt="" />
 								<blockquote>
@@ -122,7 +126,7 @@
 								
 							</div>
 						</div>
-						<div class="item">
+						<div class="item" id="records" data-audio="audioRecords">
 							<div class="testimonial">
 								<img src="assets/img/gal2.fw.png" alt="" />
 								<blockquote>
